<resources>
    <string name="app_name">简易计算器</string>
    <string name="c">C</string>
    <string name="backspace">Backspace</string>
    <string name="sub">-</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="add">+</string>
    <string name="dian">.</string>
    <string name="equal">=</string>
    <string name="divide">÷</string>
    <string name="asterisk">*</string>
    <string name="percent">%</string>

    <string name="defaultText">输入算式进行计算</string>
</resources>
