<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="4"
    android:rowCount="6"
    android:layout_gravity="center_horizontal"
    android:orientation="horizontal">

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:layout_row="0"
        android:ems="10"
        android:gravity="bottom|left"
        android:hint="@string/defaultText"
        android:maxLines="1" />

    <Button
        android:id="@+id/c"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="71dp"
        android:layout_column="0"
        android:layout_row="1"
        android:background="@drawable/ripple_bg"
        android:text="@string/c" />

    <Button
        android:id="@+id/backspace"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="146dp"
        android:layout_height="71dp"
        android:layout_column="3"
        android:layout_row="1"
        android:background="@drawable/ripple_bg"
        android:text="@string/backspace" />

    <Button
        android:id="@+id/percent"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="71dp"
        android:layout_column="1"
        android:layout_row="1"
        android:background="@drawable/ripple_bg"
        android:text="@string/percent" />

    <Button
        android:id="@+id/button5"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="71dp"
        android:layout_column="2"
        android:layout_row="1"
        android:background="@drawable/ripple_bg"
        android:text="@string/add" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:background="@drawable/ripple_bg"
        android:layout_row="2"
        android:text="Button" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple_bg"
        android:layout_column="1"
        android:layout_row="2"
        android:text="Button" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple_bg"
        android:layout_column="2"
        android:layout_row="2"
        android:text="Button" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="3"
        android:layout_row="2"
        android:background="@drawable/ripple_bg"
        android:text="Button" />


</GridLayout>